--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - run: pip install -r requirements.txt
     #  - run: black --check .
       - run: flake8 .
+      - run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
       - run: pytest --maxfail=1 --disable-warnings -q
 
   publish-docker:
